# cppExercises

fastPimpl/: CMakeLists.txt
fastPimpl/lib/: CMakeLists.txt  FastPimpl.hpp
fastPimpl/tests/: CMakeLists.txt  test.cpp  test.hpp
